--- a/Cheat Engine/aboutunit.lfm
+++ b/Cheat Engine/aboutunit.lfm
@@ -6,7 +6,7 @@ object About: TAbout
   HelpContext = 2
   BorderIcons = [biSystemMenu]
   BorderStyle = bsDialog
-  Caption = 'About Cheat Engine'
+  Caption = 'About MyCheat'
   ClientHeight = 259
   ClientWidth = 321
   Font.Height = -14
@@ -21,7 +21,7 @@ object About: TAbout
     Top = 0
     Width = 321
     Align = alClient
-    Caption = 'Cheat Engine 6.4'
+    Caption = 'MyCheat 6.4'
     ClientHeight = 241
     ClientWidth = 317
     Font.Height = -11
@@ -486,7 +486,7 @@ object About: TAbout
         object Button2: TButton
           Left = 6
           Height = 21
-          Hint = 'If you like Cheat Engine and want to contribute something to the development, just send a donation using Paypal.'
+          Hint = 'If you like MyCheat and want to contribute something to the development, just send a donation using Paypal.'
           Top = 2
           Width = 57
           Caption = 'Donate'
