--- a/Cheat Engine/Tutorial/Unit1.lfm
+++ b/Cheat Engine/Tutorial/Unit1.lfm
@@ -4,7 +4,7 @@ object Form1: TForm1
   Top = 311
   Width = 600
   BorderIcons = [biSystemMenu]
-  Caption = 'Cheat Engine Tutorial v3'
+  Caption = 'MyCheat Tutorial v3'
   ClientHeight = 280
   ClientWidth = 600
   Font.Height = -11
