--- a/Cheat Engine/formsettingsunit.lfm
+++ b/Cheat Engine/formsettingsunit.lfm
@@ -1061,7 +1061,7 @@ object formSettings: TformSettings
           Top = 0
           Width = 614
           Align = alTop
-          Caption = 'Use the following CE Kernel routines instead of the original windows version'
+          Caption = 'Use the following MC Kernel routines instead of the original windows version'
           ClientHeight = 68
           ClientWidth = 610
           TabOrder = 0
@@ -1344,7 +1344,7 @@ object formSettings: TformSettings
           Height = 19
           Top = 9
           Width = 196
-          Caption = 'Handle beakpoints not caused by CE'
+          Caption = 'Handle beakpoints not caused by MC'
           OnClick = CheckBox1Click
           TabOrder = 0
         end
@@ -1369,7 +1369,7 @@ object formSettings: TformSettings
       Top = 34
       Width = 45
       Anchors = [akRight, akBottom]
-      Caption = 'About CE'
+      Caption = 'About MC'
       Font.Color = clBlue
       Font.Height = -11
       Font.Name = 'MS Sans Serif'
