--- a/Cheat Engine/FindWindowUnit.lfm
+++ b/Cheat Engine/FindWindowUnit.lfm
@@ -12,7 +12,7 @@ object FindWindow: TFindWindow
   Font.Name = 'MS Sans Serif'
   OnShow = FormShow
   Position = poScreenCenter
-  LCLVersion = '1.3'
+  LCLVersion = '1.6.0.4'
   object ProgressBar: TProgressBar
     Left = 0
     Height = 20
@@ -32,6 +32,7 @@ object FindWindow: TFindWindow
     ClientHeight = 116
     ClientWidth = 285
     TabOrder = 1
+    OnClick = Panel1Click
     object labelType: TLabel
       Left = 0
       Height = 13
@@ -84,9 +85,9 @@ object FindWindow: TFindWindow
     end
     object rbText: TRadioButton
       Left = 0
-      Height = 19
+      Height = 21
       Top = 22
-      Width = 41
+      Width = 43
       Caption = 'Text'
       Checked = True
       TabOrder = 3
@@ -94,17 +95,17 @@ object FindWindow: TFindWindow
     end
     object rbArByte: TRadioButton
       Left = 0
-      Height = 19
+      Height = 21
       Top = 42
-      Width = 85
+      Width = 87
       Caption = '(Array of) byte'
       TabOrder = 5
     end
     object cbUnicode: TCheckBox
       Left = 72
-      Height = 19
+      Height = 21
       Top = 22
-      Width = 60
+      Width = 62
       Caption = 'Unicode'
       TabOrder = 4
     end
