--- a/Cheat Engine/formChangedAddresses.lfm
+++ b/Cheat Engine/formChangedAddresses.lfm
@@ -126,7 +126,7 @@ object frmChangedAddresses: TfrmChangedAddresses
       OnClick = micbShowAsHexadecimalClick
     end
     object MenuItem1: TMenuItem
-      Caption = 'Copy address to clipboard'
+      Caption = 'Copy *address to clipboard'
       ShortCut = 16451
       OnClick = MenuItem1Click
     end
