--- a/Cheat Engine/formsettingsunit.lfm
+++ b/Cheat Engine/formsettingsunit.lfm
@@ -106,7 +106,7 @@ object formSettings: TformSettings
           Height = 14
           Top = 424
           Width = 159
-          Caption = 'Found address list update interval'
+          Caption = 'Found *address list update interval'
           ParentColor = False
         end
         object Label19: TLabel
