--- a/Cheat Engine/formsettingsunit.lfm
+++ b/Cheat Engine/formsettingsunit.lfm
@@ -14,7 +14,7 @@ object formSettings: TformSettings
   OnDestroy = FormDestroy
   OnShow = FormShow
   Position = poMainFormCenter
-  LCLVersion = '1.3'
+  LCLVersion = '1.6.0.4'
   object pnlConfig: TPanel
     Left = 0
     Height = 470
@@ -156,7 +156,7 @@ object formSettings: TformSettings
         object EditUpdateInterval: TEdit
           Left = 165
           Height = 21
-          Hint = 'The number of milliseconds that MyCheat will wait before refreshing the list of addresses'
+          Hint = 'THE NUMBER OF MILLISECONDS THAT MYCHEAT WILL WAIT BEFORE REFRESHING THE LIST OF *ADDRESSES'
           Top = 369
           Width = 53
           ParentShowHint = False
@@ -167,7 +167,7 @@ object formSettings: TformSettings
         object EditFreezeInterval: TEdit
           Left = 165
           Height = 21
-          Hint = 'The number of milliseconds that MyCheat will wait before resetting the frozen addresses to their original value.'
+          Hint = 'THE NUMBER OF *MILLISECONDS THAT MYCHEAT WILL WAIT BEFORE RESETTING THE FROZEN *ADDRESSES TO THEIR ORIGINAL VALUE.'
           Top = 394
           Width = 53
           ParentShowHint = False
@@ -246,7 +246,7 @@ object formSettings: TformSettings
         object EditAutoAttach: TEdit
           Left = 209
           Height = 21
-          Hint = 'Type the name of the process you want to automatically open. Note: Only works when NO process has been opened yet'
+          Hint = 'TYPE THE NAME OF THE *PROCESS YOU WANT TO *AUTOMATICALLY *OPEN. NOTE: ONLY WORKS WHEN NO *PROCESS HAS BEEN *OPENED YET'
           Top = 317
           Width = 143
           TabOrder = 9
@@ -256,7 +256,7 @@ object formSettings: TformSettings
           Height = 19
           Top = 343
           Width = 334
-          Caption = 'Even autoattach when another process has already been selected'
+          Caption = 'EVEN AUTO*ATTACH WHEN ANOTHER *PROCESS HAS ALREADY BEEN SELECTED'
           TabOrder = 10
         end
         object cbSaveWindowPos: TCheckBox
@@ -752,10 +752,10 @@ object formSettings: TformSettings
         ImageIndex = 5
         object replacewithnops: TCheckBox
           Left = 15
-          Height = 19
+          Height = 21
           Hint = 'If you type in a opcode and it is smaller than the opcode you replaced, it will fill the missing bytes with NOP instructions. If the opcode is longer it will replace the opcode(s) that have been overwritten with NOP''s'
           Top = 90
-          Width = 206
+          Width = 208
           Caption = 'Replace incomplete opcodes with nops'
           Checked = True
           OnClick = replacewithnopsClick
@@ -766,9 +766,9 @@ object formSettings: TformSettings
         end
         object askforreplacewithnops: TCheckBox
           Left = 31
-          Height = 19
+          Height = 21
           Top = 109
-          Width = 134
+          Width = 136
           Caption = 'Ask for replace with nop'
           Checked = True
           State = cbChecked
@@ -863,9 +863,9 @@ object formSettings: TformSettings
               ClientWidth = 404
               object CheckBox1: TCheckBox
                 Left = 2
-                Height = 19
+                Height = 21
                 Top = 5
-                Width = 211
+                Width = 213
                 Caption = 'Try to prevent detection of the debugger'
                 OnChange = CheckBox1Change
                 TabOrder = 0
@@ -896,9 +896,9 @@ object formSettings: TformSettings
         end
         object rbgDebuggerInterface: TRadioGroup
           Left = 7
-          Height = 87
+          Height = 93
           Top = 217
-          Width = 161
+          Width = 163
           AutoFill = True
           AutoSize = True
           Caption = 'Debugger method'
@@ -910,14 +910,14 @@ object formSettings: TformSettings
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 69
-          ClientWidth = 157
+          ClientHeight = 75
+          ClientWidth = 159
           TabOrder = 3
           object cbUseVEHDebugger: TRadioButton
             Left = 6
-            Height = 19
+            Height = 21
             Top = 6
-            Width = 145
+            Width = 147
             Caption = 'Use VEH Debugger'
             OnChange = cbDebuggerInterfaceChange
             OnClick = cbDebuggerInterfaceChange
@@ -926,9 +926,9 @@ object formSettings: TformSettings
           object cbUseWindowsDebugger: TRadioButton
             Tag = 1
             Left = 6
-            Height = 19
-            Top = 25
-            Width = 145
+            Height = 21
+            Top = 27
+            Width = 147
             Caption = 'Use windows debugger'
             Checked = True
             OnChange = cbDebuggerInterfaceChange
@@ -939,9 +939,9 @@ object formSettings: TformSettings
           object cbKDebug: TRadioButton
             Tag = 2
             Left = 6
-            Height = 19
-            Top = 44
-            Width = 145
+            Height = 21
+            Top = 48
+            Width = 147
             Caption = 'Use kernelmode debugger'
             OnChange = cbDebuggerInterfaceChange
             OnClick = cbDebuggerInterfaceChange
@@ -982,9 +982,9 @@ object formSettings: TformSettings
         end
         object cbOverrideExistingBPs: TCheckBox
           Left = 15
-          Height = 19
+          Height = 21
           Top = 153
-          Width = 277
+          Width = 279
           Caption = 'Override existing breakpoints when setting breakpoints'
           Checked = True
           State = cbChecked
@@ -992,19 +992,19 @@ object formSettings: TformSettings
         end
         object GroupBox4: TGroupBox
           Left = 7
-          Height = 69
+          Height = 71
           Top = 1
-          Width = 577
+          Width = 579
           AutoSize = True
           Caption = 'Prefered breakpoint method'
-          ClientHeight = 51
-          ClientWidth = 573
+          ClientHeight = 53
+          ClientWidth = 575
           TabOrder = 6
           object rbDebugAsBreakpoint: TRadioButton
             Left = 0
-            Height = 19
+            Height = 21
             Top = 0
-            Width = 163
+            Width = 165
             Caption = 'Hardware Breakpoints (Max 4)'
             Checked = True
             TabOrder = 0
@@ -1012,27 +1012,27 @@ object formSettings: TformSettings
           end
           object rbInt3AsBreakpoint: TRadioButton
             Left = 0
-            Height = 19
+            Height = 21
             Top = 16
-            Width = 358
+            Width = 360
             Caption = 'Int3 instructions (Execute BP only, falls back to hardware bp) (Unlimited)'
             TabOrder = 1
           end
           object rbPageExceptions: TRadioButton
             Left = 0
-            Height = 19
+            Height = 21
             Top = 32
-            Width = 573
+            Width = 575
             Caption = 'Page exceptions (Extremely slow to unplayable, buggy, best used if nothing else works. Does not use debug registers)'
             TabOrder = 2
           end
         end
         object cbWaitAfterGuiUpdate: TCheckBox
           Left = 15
-          Height = 19
+          Height = 21
           Hint = 'Sometimes when using one of the "find out what..." functions they get hit so often that the gui has no time to update, resulting in anoying behaviour like certain windows not closing or unresponsive buttons.'#13#10'With this option enabled the debugger will give the gui some time to handle the messages before it sends it a new update.'#13#10'Downside: The game may become slightly slower when using these functions. (Of course, if it has been hammering the gui, it would already have been frozen)'
           Top = 130
-          Width = 124
+          Width = 126
           Caption = 'Wait after gui updates'
           ParentShowHint = False
           ShowHint = True
@@ -1364,10 +1364,10 @@ object formSettings: TformSettings
     OnResize = Panel6Resize
     object AboutLabel: TLabel
       Cursor = crHandPoint
-      Left = 725
+      Left = 723
       Height = 13
       Top = 34
-      Width = 45
+      Width = 47
       Anchors = [akRight, akBottom]
       Caption = 'About MC'
       Font.Color = clBlue
